# platform.upstream.gst-plugins-bad

./: .gitignore  COPYING.LIB  Makefile.am  Makefile.in  RELEASE  _stdint.h  configure  configure.ac  gst-plugins-bad.lang  project.config
common/: Makefile.in
debian/: changelog  control  gstreamer0.10-plugins-bad.install.in  rules
docs/: Makefile.am  Makefile.in
ext/: Makefile.am  Makefile.in
gst/: Makefile.in
gst-libs/: Makefile.in
gst-libs/gst/: Makefile.am  Makefile.in
gst-libs/gst/adaptivedemux/: Makefile.in  gstadaptivedemux.c  gstadaptivedemux.h
gst-libs/gst/base/: Makefile.in
gst-libs/gst/basecamerabinsrc/: Makefile.in
gst-libs/gst/codecparsers/: Makefile.in  gstmpeg4parser.c
gst-libs/gst/gl/: Makefile.am  Makefile.in  gstglbufferpool.c  gstglconfig.h  gstglcontext.c  gstgldisplay.c  gstglfilter.c  gstglupload.c  gstglwindow.h
gst-libs/gst/gl/android/: Makefile.in
gst-libs/gst/gl/cocoa/: Makefile.in
gst-libs/gst/gl/dispmanx/: Makefile.in
gst-libs/gst/gl/eagl/: Makefile.in
gst-libs/gst/gl/egl/: Makefile.in
gst-libs/gst/gl/glprototypes/: Makefile.in
gst-libs/gst/gl/wayland/: Makefile.in
gst-libs/gst/gl/win32/: Makefile.in
gst-libs/gst/gl/x11/: Makefile.in
gst-libs/gst/insertbin/: Makefile.in
gst-libs/gst/interfaces/: Makefile.in  photography.c  photography.h
gst-libs/gst/mpegts/: Makefile.in  gstmpegts-enumtypes.c
gst-libs/gst/signalprocessor/: Makefile.in
gst-libs/gst/uridownloader/: Makefile.in
gst-libs/gst/video/: Makefile.in
gst-libs/gst/wayland/: Makefile.am  Makefile.in
gst/wfdrtspsrc/: Makefile.am  gstwfdrtspsrc.c  gstwfdrtspsrc.h  wfdconfigmessage.c  wfdconfigmessage.h  wfdrtspstream.h
m4/: Makefile.in
packaging/: common.tar.bz2  gst-plugins-bad-disable-gtk-doc.patch  gst-plugins-bad.changes  gst-plugins-bad.spec  gst-plugins-bad0.10.spec
pkgconfig/: Makefile.am  Makefile.in
po/: POTFILES  af.po  az.po  cs.po  da.po  en_GB.po  (+5 more)
(+337 files in other folders)
